--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="esp">
   <head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Portafolio Luis Proaño</title>
@@ -20,14 +20,24 @@
       src="https://kit.fontawesome.com/6b0af4bcb3.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Google Fonts -->
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Roboto">
+
+
+          
+   
   </head>
 
   <body>
-    
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-scroll">
+      <!-- Div Central -->
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Luisillo</a>
+
+        <!-- Botón moviles desplegar opciones -->
         <button
           class="navbar-toggler"
           type="button"
@@ -39,24 +49,37 @@
         >
           <i class="fas fa-bars"></i>
         </button>
+        <!-- End Botón movil -->
+
+        <!-- Opciones Izquierdo -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <!-- ul = Listado -->
           <ul class="navbar-nav me-auto">
+            <!-- Opcion 1 -->
             <li class="nav-item">
               <a class="nav-link" href="#About">About</a>
             </li>
+
+            <!-- Opcion 2 -->
             <li class="nav-item">
               <a class="nav-link" href="#About">Projects</a>
             </li>
+
+            <!-- Opcion 3 -->
             <li class="nav-item">
               <a class="nav-link" href="#Contact">Contact</a>
             </li>
           </ul>
+          <!-- End Listado -->
+
+          <!-- Listado íconos -->
           <ul class="navbar-nav d-flex flex-row">
             <li class="nav-item me-3 me-lg-0">
               <a class="nav-link" href="#!">
                 <i class="fas fa-shopping-cart"></i>
               </a>
             </li>
+
             <li class="nav-item me-3 me-lg-0">
               <a class="nav-link" href="#!">
                 <i class="fab fa-twitter"></i>
@@ -68,6 +91,7 @@
               </a>
             </li>
           </ul>
+          <!-- End Listado íconos -->
         </div>
       </div>
     </nav>
@@ -80,8 +104,10 @@
       </div>
     </div>
 
+    <!-- Cards -->
     <div class="container">
       <div class="row">
+        <!-- Trabajar bajo columnas -->
         <div class="col-lg-4 col-md-6 col-sm-12 pt-3">
           <div class="contenido">
             <h1 class="titulo" id="About">Sobre mi</h1>
@@ -144,11 +170,13 @@
         </div>
       </div>
     </div>
+    <!-- End Cards -->
 
     <!-- Video Animación 3D -->
     <div class="animación text-center pt-4">
       <h1 id="personaje" class="text-white py-4">Animación Personaje 3D</h1>
       <div class="video-container">
+        <!-- Controles dentro de video -->
         <video width="100%" height="auto" autoplay loop muted>
           <source src="video/videomascota.mp4" type="video/mp4" />
           Tu navegador no soporta la reproducción de video.
@@ -180,8 +208,8 @@
     <footer class="site-footer">
       <div class="container">
         <div class="row">
-
           <div class="col-sm-12 col-md-6">
+            <!-- Texto Footer -->
             <h6>About</h6>
             <p class="text-justify">
               Lorem Ipsum es simplemente el texto de relleno de las imprentas y
@@ -243,6 +271,7 @@
         </div>
         <hr />
       </div>
+
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-sm-6 col-xs-12">
@@ -272,4 +301,9 @@
       </div>
     </footer>
   </body>
+  <footer>
+    <!-- End Footer -->
+
+    <script></script>
+  </footer>
 </html>
