--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-scroll">
       <!-- Div Central -->
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Luisillo</a>
+        <a class="navbar-brand" href="#">Diseñador Gráfico</a>
 
         <!-- Botón moviles desplegar opciones -->
         <button
@@ -81,12 +81,12 @@
             </li>
 
             <li class="nav-item me-3 me-lg-0">
-              <a class="nav-link" href="#!">
+              <a class="nav-link" href="https://twitter.com/lois26_ayala19">
                 <i class="fab fa-twitter"></i>
               </a>
             </li>
             <li class="nav-item me-3 me-lg-0">
-              <a class="nav-link" href="#!">
+              <a class="nav-link" href="https://www.instagram.com/luis.omarpa/">
                 <i class="fab fa-instagram"></i>
               </a>
             </li>
@@ -110,21 +110,11 @@
         <!-- Trabajar bajo columnas -->
         <div class="col-lg-4 col-md-6 col-sm-12 pt-3">
           <div class="contenido">
-            <h1 class="titulo" id="About">Sobre mi</h1>
+            <h1 class="titulo" id="About">Acerca de mí</h1>
             <img class="foto" src="img/foto.jpg" />
             <p class="pt-3">
-              Lorem Ipsum es simplemente el texto de relleno de las imprentas y
-              archivos de texto. Lorem Ipsum ha sido el texto de relleno
-              estándar de las industrias desde el año 1500, cuando un impresor
-              (N. del T. persona que se dedica a la imprenta) desconocido usó
-              una galería de textos y los mezcló de tal manera que logró hacer
-              un libro de textos especimen. No sólo sobrevivió 500 años, sino
-              que tambien ingresó como texto de relleno en documentos
-              electrónicos, quedando esencialmente igual al original. Fue
-              popularizado en los 60s con la creación de las hojas "Letraset",
-              las cuales contenian pasajes de Lorem Ipsum, y más recientemente
-              con software de autoedición, como por ejemplo Aldus PageMaker, el
-              cual incluye versiones de Lorem Ipsum.
+              Mi nombre es Luis Proaño licenciado en diseño gráfico, profesional, creativo y visualmente hábil que se encarga de crear diseños visuales atractivos y funcionales para comunicar mensajes y transmitir ideas de manera efectiva.
+              Me especializo en creación de imágenes, logotipos, branding de marca, empaques, modelado 3D, y otros elementos visuales utilizados en publicidad, marketing, medios digitales e impresos, me encargo de dar forma a los aspectos visuales de los sitios web, libros, revistas, embalajes de productos, exposiciones y más
             </p>
           </div>
         </div>
@@ -133,18 +123,8 @@
             <h1 class="titulo">Portafolio</h1>
             <img class="foto" src="img/ukiyo sushi.png" />
             <p class="pt-3">
-              Lorem Ipsum es simplemente el texto de relleno de las imprentas y
-              archivos de texto. Lorem Ipsum ha sido el texto de relleno
-              estándar de las industrias desde el año 1500, cuando un impresor
-              (N. del T. persona que se dedica a la imprenta) desconocido usó
-              una galería de textos y los mezcló de tal manera que logró hacer
-              un libro de textos especimen. No sólo sobrevivió 500 años, sino
-              que tambien ingresó como texto de relleno en documentos
-              electrónicos, quedando esencialmente igual al original. Fue
-              popularizado en los 60s con la creación de las hojas "Letraset",
-              las cuales contenian pasajes de Lorem Ipsum, y más recientemente
-              con software de autoedición, como por ejemplo Aldus PageMaker, el
-              cual incluye versiones de Lorem Ipsum.
+              Aquí se incluye una variedad de proyectos que a lo largo de mi vida he logrado concretar y asi aumentando mi experiencia y mejorando mis habilidades a la hora de diseñar, logrando asi trabajos funcionaes y de calidad, asi ganandome la confianza de mi clientes para proximos trabajos.
+              En cada proyecto, sigo una metodología de trabajo que involucra una investigación exhaustiva, ideación creativa, prototipado y refinamiento continuo. Creo en la colaboración estrecha con mis clientes para asegurarme de que sus visiones se materialicen de la mejor manera posible.
             </p>
           </div>
         </div>
@@ -153,18 +133,8 @@
             <h1 class="titulo">Experiencias</h1>
             <img class="foto" src="img/sig.png" />
             <p class="pt-3">
-              Lorem Ipsum es simplemente el texto de relleno de las imprentas y
-              archivos de texto. Lorem Ipsum ha sido el texto de relleno
-              estándar de las industrias desde el año 1500, cuando un impresor
-              (N. del T. persona que se dedica a la imprenta) desconocido usó
-              una galería de textos y los mezcló de tal manera que logró hacer
-              un libro de textos especimen. No sólo sobrevivió 500 años, sino
-              que tambien ingresó como texto de relleno en documentos
-              electrónicos, quedando esencialmente igual al original. Fue
-              popularizado en los 60s con la creación de las hojas "Letraset",
-              las cuales contenian pasajes de Lorem Ipsum, y más recientemente
-              con software de autoedición, como por ejemplo Aldus PageMaker, el
-              cual incluye versiones de Lorem Ipsum.
+              A lo largo de mi trayectoria, como diseñador gráfico he trabajado con diferentes con marcas y empresas para la creación de logotipos y branding de la marca, he trabajado en publidad de marca con diferentes empresas como SIG/SIG que es un medio digital que se encarga de dar a conocer noticaias y acontecimientos y Muévete que es una empresa de alquiler de scooters como movilidad sustentable.
+              Gracias a esto he conocido personas increibles y creado amistades, que a lo largo de los años nos hemos ayudado mutuamente en variedad de proyectos más desafiantes y alcanzando el éxito profesional.
             </p>
           </div>
         </div>
@@ -210,14 +180,9 @@
         <div class="row">
           <div class="col-sm-12 col-md-6">
             <!-- Texto Footer -->
-            <h6>About</h6>
+            <h6>Acerca de mí</h6>
             <p class="text-justify">
-              Lorem Ipsum es simplemente el texto de relleno de las imprentas y
-              archivos de texto. Lorem Ipsum ha sido el texto de relleno
-              estándar de las industrias desde el año 1500, cuando un impresor
-              (N. del T. persona que se dedica a la imprenta) desconocido usó
-              una galería de textos y los mezcló de tal manera que logró hacer
-              un libro de textos especimen.
+              Soy Luis Proaño, un apasionado diseñador gráfico con un enfoque en la creación de soluciones visuales impactantes y efectivas. Mi objetivo es combinar una estética visual excepcional con estrategias de diseño inteligentes para lograr resultados significativos
             </p>
           </div>
 
@@ -226,26 +191,21 @@
             <ul class="footer-links">
               <li><a href="http://scanfcode.com/category/c-language/">C</a></li>
               <li>
-                <a href="http://scanfcode.com/category/front-end-development/"
-                  >UI Design</a
+                <a href="https://www.facebook.com/profile.php?id=100010037775371"
+                  >Facebook</a
                 >
               </li>
               <li>
-                <a href="http://scanfcode.com/category/back-end-development/"
-                  >PHP</a
+                <a href="https://github.com/SquaredWolf"
+                  >GitHub</a
                 >
               </li>
               <li>
                 <a
-                  href="http://scanfcode.com/category/java-programming-language/"
-                  >Java</a
+                  href="https://www.linkedin.com/feed/"
+                  >linkedin</a
                 >
               </li>
-              <li>
-                <a href="http://scanfcode.com/category/android/">Android</a>
-              </li>
-              <li>
-                <a href="http://scanfcode.com/category/templates/">Templates</a>
               </li>
             </ul>
           </div>
@@ -255,11 +215,6 @@
             <ul class="footer-links">
               <li><a href="http://scanfcode.com/about/">About Us</a></li>
               <li><a href="http://scanfcode.com/contact/">Contact Us</a></li>
-              <li>
-                <a href="http://scanfcode.com/contribute-at-scanfcode/"
-                  >Contribute</a
-                >
-              </li>
               <li>
                 <a href="http://scanfcode.com/privacy-policy/"
                   >Privacy Policy</a
@@ -276,7 +231,7 @@
         <div class="row">
           <div class="col-md-8 col-sm-6 col-xs-12">
             <p class="copyright-text">
-              Copyright &copy; 2017 All Rights Reserved by
+              Copyright &copy; 2023 All Rights Reserved by
               <a href="#">Luis Proaño</a>.
             </p>
           </div>
@@ -284,16 +239,16 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <ul class="social-icons">
               <li>
-                <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
+                <a class="facebook" href="https://www.facebook.com/profile.php?id=100010037775371"><i class="fa fa-facebook"></i></a>
               </li>
               <li>
-                <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+                <a class="twitter" href="https://twitter.com/lois26_ayala19"><i class="fa fa-twitter"></i></a>
               </li>
               <li>
-                <a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a>
+                <a class="dribbble" href="https://dribbble.com/Squaredwolf"><i class="fa fa-dribbble"></i></a>
               </li>
               <li>
-                <a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a>
+                <a class="linkedin" href="https://www.linkedin.com/feed/"><i class="fa fa-linkedin"></i></a>
               </li>
             </ul>
           </div>
