--- a/about.html
+++ b/about.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Portafolio Luis Proaño</title>
+    <title>Sobre Mi</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/about.css" />
 
     <!-- Bootstrap -->
     <link
@@ -22,10 +22,12 @@
     ></script>
 
     <!-- Google Fonts -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto"
-    />
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Roboto">
+
+
+          
+   
   </head>
 
   <body>
@@ -57,7 +59,6 @@
             <li class="nav-item">
               <a class="nav-link" href="index.html">inico</a>
             </li>
-
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
             </li>
@@ -67,6 +68,8 @@
               <a class="nav-link" href="projects.html">Projects</a>
             </li>
 
+            <!-- Opcion 3 -->
+            
             <li class="nav-item">
               <a class="nav-link" href="experience.html">Experience</a>
             </li>
@@ -109,63 +112,29 @@
         <img src="img/logo.png" style="max-width: 40%; height: auto" />
       </div>
     </div>
-
     <!-- Cards -->
     <div class="container">
       <div class="row">
         <!-- Trabajar bajo columnas -->
-        <div class="col-lg-4 col-md-6 col-sm-12 pt-3">
+        <div class=>
           <div class="contenido">
-            <h1 class="titulo" href="about.html" id="About">Acerca de mí</h1>
+            <h1 class="titulo" id="About">Acerca de mí</h1>
             <img class="foto" src="img/foto.jpg" />
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 pt-3">
-          <div class="contenido pt-2">
-            <h1 class="titulo" href="projects.html">Portafolio</h1>
-            <img class="foto" src="img/ukiyo sushi.png" />
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-12 col-sm-12 pt-3">
-          <div class="contenido">
-            <h1 class="titulo" href="">Experiencias</h1>
-            <img class="foto" src="img/sig.png" />
+            <p class="pt-3">
+              Mi nombre es Luis Proaño licenciado en diseño gráfico, profesional, creativo y visualmente hábil que se encarga de crear diseños visuales atractivos y funcionales para comunicar mensajes y transmitir ideas de manera efectiva.
+              Me especializo en creación de imágenes, logotipos, branding de marca, empaques, modelado 3D, y otros elementos visuales utilizados en publicidad, marketing, medios digitales e impresos, me encargo de dar forma a los aspectos visuales de los sitios web, libros, revistas, embalajes de productos, exposiciones y más
+            </p>
           </div>
         </div>
       </div>
     </div>
     <!-- End Cards -->
 
-    <!-- Video Animación 3D -->
-    <div class="animación text-center pt-4">
-      <h1 id="personaje" class="text-white py-4">Animación Personaje 3D</h1>
-      <div class="video-container">
-        <!-- Controles dentro de video -->
-        <video width="100%" height="auto" autoplay loop muted>
-          <source src="video/videomascota.mp4" type="video/mp4" />
-          Tu navegador no soporta la reproducción de video.
-        </video>
-      </div>
-    </div>
+  <br>
+  <br>
+  <br>
+  <br>
 
-    <!-- Contact Form -->
-    <h1 class="text-center text-white pb-4">¡Contáctame!</h1>
-    <form class="cf pb-4" id="Contact">
-      <div class="half left cf">
-        <input type="text" id="input-name" placeholder="Nombre" />
-        <input type="email" id="input-email" placeholder="Correo" />
-        <input type="text" id="input-subject" placeholder="Asunto" />
-      </div>
-      <div class="half right cf">
-        <textarea
-          name="message"
-          type="text"
-          id="input-message"
-          placeholder="Mensaje"
-        ></textarea>
-      </div>
-      <input type="submit" value="Enviar" id="input-submit" />
-    </form>
     <!-- End Contact Form -->
 
     <!-- Site footer -->
@@ -176,11 +145,7 @@
             <!-- Texto Footer -->
             <h6>Acerca de mí</h6>
             <p class="text-justify">
-              Soy Luis Proaño, un apasionado diseñador gráfico con un enfoque en
-              la creación de soluciones visuales impactantes y efectivas. Mi
-              objetivo es combinar una estética visual excepcional con
-              estrategias de diseño inteligentes para lograr resultados
-              significativos
+              Soy Luis Proaño, un apasionado diseñador gráfico con un enfoque en la creación de soluciones visuales impactantes y efectivas. Mi objetivo es combinar una estética visual excepcional con estrategias de diseño inteligentes para lograr resultados significativos
             </p>
           </div>
 
@@ -189,16 +154,21 @@
             <ul class="footer-links">
               <li><a href="http://scanfcode.com/category/c-language/">C</a></li>
               <li>
-                <a
-                  href="https://www.facebook.com/profile.php?id=100010037775371"
+                <a href="https://www.facebook.com/profile.php?id=100010037775371"
                   >Facebook</a
                 >
               </li>
               <li>
-                <a href="https://github.com/SquaredWolf">GitHub</a>
+                <a href="https://github.com/SquaredWolf"
+                  >GitHub</a
+                >
               </li>
               <li>
-                <a href="https://www.linkedin.com/feed/">linkedin</a>
+                <a
+                  href="https://www.linkedin.com/feed/"
+                  >linkedin</a
+                >
+              </li>
               </li>
             </ul>
           </div>
@@ -232,26 +202,16 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <ul class="social-icons">
               <li>
-                <a
-                  class="facebook"
-                  href="https://www.facebook.com/profile.php?id=100010037775371"
-                  ><i class="fa fa-facebook"></i
-                ></a>
+                <a class="facebook" href="https://www.facebook.com/profile.php?id=100010037775371"><i class="fa fa-facebook"></i></a>
               </li>
               <li>
-                <a class="twitter" href="https://twitter.com/lois26_ayala19"
-                  ><i class="fa fa-twitter"></i
-                ></a>
+                <a class="twitter" href="https://twitter.com/lois26_ayala19"><i class="fa fa-twitter"></i></a>
               </li>
               <li>
-                <a class="dribbble" href="https://dribbble.com/Squaredwolf"
-                  ><i class="fa fa-dribbble"></i
-                ></a>
+                <a class="dribbble" href="https://dribbble.com/Squaredwolf"><i class="fa fa-dribbble"></i></a>
               </li>
               <li>
-                <a class="linkedin" href="https://www.linkedin.com/feed/"
-                  ><i class="fa fa-linkedin"></i
-                ></a>
+                <a class="linkedin" href="https://www.linkedin.com/feed/"><i class="fa fa-linkedin"></i></a>
               </li>
             </ul>
           </div>
@@ -262,7 +222,6 @@
   <footer>
     <!-- End Footer -->
 
-    <!-- llamar al js -->
-    <script src="js/script.js"></script>
+    <script></script>
   </footer>
 </html>
